--- a/chat room.css
+++ b/chat room.css
@@ -53,3 +53,10 @@
     text-align:center;
     margin-top:50px;
 }
+/* .save{
+    border:0;
+    background-color:lightyellow;
+    width:50px;
+    height:15px;
+    letter-spacing:2px;
+} */
